--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ logo:             logo.png
 disqus_shortname:
 
 owner:
-  name:           liu2gou
+  name:           狗子
   avatar:         ""
   email:          "9955337#gmail.com"
   # Social networking links used in footer. Update and remove as you like.
