--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
+name: liu2gou
 description: >
-狗子
-
+    A simple jekyll theme aimed at programmers who like clean interface to write posts
+    and show off some code.
 about: >
-    
+    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.
+
 master_repo: false
-url: "http://48.tn"
+url: "http://vinitkumar.me/white-paper"
 markdown: kramdown
 highlighter: rouge
 
@@ -16,9 +18,9 @@ logo:             logo.png
 disqus_shortname:
 
 owner:
-  name:           狗子
+  name:           liu2gou
   avatar:         ""
-  email:          "9955337#gmail.com"
+  email:          ""
   # Social networking links used in footer. Update and remove as you like.
   twitter:
   github:
